--- a/resources/mediasearch-vue/components/results/OtherResult.less
+++ b/resources/mediasearch-vue/components/results/OtherResult.less
@@ -11,7 +11,7 @@
 		padding: 0;
 	}
 
-	.wbmi-image-result {
+	&__thumbnail-wrapper {
 		.flex( 0, 0, auto, 0 );
 		margin: 0 @wbmi-spacing-base-px 0 0;
 	}
