--- a/resources/mediasearch-vue/components/results/VideoResult.less
+++ b/resources/mediasearch-vue/components/results/VideoResult.less
@@ -60,7 +60,7 @@
 	&__thumbnail {
 		background-color: #000;
 		object-fit: contain;
-		height: 150px;
+		max-height: 150px;
 		width: 100%;
 	}
 
